booster start made to match spec

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 17571 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 17806 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -247,23 +247,29 @@
     "#             self.send_data(self.gray_lut_ww[count])\n",
     "    \n",
     "    def init(self):\n",
+    "        logging.info('init EPD screen')\n",
     "        if (epdconfig.module_init() != 0):\n",
     "            return -1\n",
     "            \n",
     "        # EPD hardware init start\n",
     "        self.reset()\n",
     "        \n",
+    "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
+    "        \n",
+    "        logging.debug('boosteer soft start')\n",
+    "        self.send_command(0x06) # BOOSTER_SOFT_START\n",
+    "        self.send_data(0x07)\n",
+    "        self.send_data(0x07)\n",
+    "#         self.send_data(0x17)\n",
+    "        self.send_data(0x04)\n",
+    "                \n",
     "        self.send_command(0x01) # POWER_SETTING\n",
     "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
     "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
     "        self.send_data(0x2b) # VDH\n",
     "        self.send_data(0x2b) # VDL\n",
-    "        self.send_data(0x09) # VDHR\n",
+    "        self.send_data(0x09) # VDHR \n",
     "        \n",
-    "        self.send_command(0x06) # BOOSTER_SOFT_START\n",
-    "        self.send_data(0x07)\n",
-    "        self.send_data(0x07)\n",
-    "        self.send_data(0x17)\n",
     "        \n",
     "        # Power optimization\n",
     "        self.send_command(0xF8)\n",
