booster start made to match spec

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -256,13 +256,34 @@
     "        \n",
     "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
     "        \n",
-    "        logging.debug('boosteer soft start')\n",
+    "        logging.debug('booster soft start')\n",
     "        self.send_command(0x06) # BOOSTER_SOFT_START\n",
     "        self.send_data(0x07)\n",
     "        self.send_data(0x07)\n",
     "#         self.send_data(0x17)\n",
     "        self.send_data(0x04)\n",
-    "                \n",
+    "    \n",
+    "        logging.debug('power optimization stage 1-4')\n",
+    "        # Power optimization stage 1\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x60)\n",
+    "        self.send_data(0xA5)\n",
+    "        \n",
+    "        # Power optimization stage 2\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x89)\n",
+    "        self.send_data(0xA5)\n",
+    "        \n",
+    "        # Power optimization stage 3\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x90)\n",
+    "        self.send_data(0x00)\n",
+    "        \n",
+    "        # Power optimization stage 4\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x93)\n",
+    "        self.send_data(0x2A)        \n",
+    "    \n",
     "        self.send_command(0x01) # POWER_SETTING\n",
     "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
     "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
@@ -271,25 +292,8 @@
     "        self.send_data(0x09) # VDHR \n",
     "        \n",
     "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0x60)\n",
-    "        self.send_data(0xA5)\n",
     "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0x89)\n",
-    "        self.send_data(0xA5)\n",
-    "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0x90)\n",
-    "        self.send_data(0x00)\n",
-    "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0x93)\n",
-    "        self.send_data(0x2A)\n",
+    "\n",
     "        \n",
     "        # Power optimization\n",
     "        self.send_command(0xF8)\n",
