remove uneeded power saving

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 17806 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 17902 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -292,23 +292,20 @@
     "        self.send_data(0x09) # VDHR \n",
     "        \n",
     "        \n",
+    "#         # Power optimization\n",
+    "#         self.send_command(0xF8)\n",
+    "#         self.send_data(0xA0)\n",
+    "#         self.send_data(0xA5)\n",
     "        \n",
-    "\n",
+    "#         # Power optimization\n",
+    "#         self.send_command(0xF8)\n",
+    "#         self.send_data(0xA1)\n",
+    "#         self.send_data(0x00)\n",
     "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0xA0)\n",
-    "        self.send_data(0xA5)\n",
-    "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0xA1)\n",
-    "        self.send_data(0x00)\n",
-    "        \n",
-    "        # Power optimization\n",
-    "        self.send_command(0xF8)\n",
-    "        self.send_data(0x73)\n",
-    "        self.send_data(0x41)\n",
+    "#         # Power optimization\n",
+    "#         self.send_command(0xF8)\n",
+    "#         self.send_data(0x73)\n",
+    "#         self.send_data(0x41)\n",
     "        \n",
     "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
     "        self.send_data(0x00)\n",
