--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 17902 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 17907 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
     "#         self.send_data(0x17)\n",
     "        self.send_data(0x04)\n",
     "    \n",
-    "        logging.debug('power optimization stage 1-4')\n",
+    "        logging.debug('power optimization stages 1-4')\n",
     "        # Power optimization stage 1\n",
     "        self.send_command(0xF8)\n",
     "        self.send_data(0x60)\n",
@@ -284,12 +284,13 @@
     "        self.send_data(0x93)\n",
     "        self.send_data(0x2A)        \n",
     "    \n",
+    "        logging.debug('power setting')\n",
     "        self.send_command(0x01) # POWER_SETTING\n",
     "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
     "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
     "        self.send_data(0x2b) # VDH\n",
     "        self.send_data(0x2b) # VDL\n",
-    "        self.send_data(0x09) # VDHR \n",
+    "#         self.send_data(0x09) # VDHR \n",
     "        \n",
     "        \n",
     "#         # Power optimization\n",
@@ -307,8 +308,12 @@
     "#         self.send_data(0x73)\n",
     "#         self.send_data(0x41)\n",
     "        \n",
+    "        \n",
+    "        \n",
     "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
     "        self.send_data(0x00)\n",
+    "        \n",
+    "        \n",
     "        self.send_command(0x04) # POWER_ON\n",
     "        self.ReadBusy()\n",
     "\n",
