--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 17907 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 17985 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -309,7 +309,7 @@
     "#         self.send_data(0x41)\n",
     "        \n",
     "        \n",
-    "        \n",
+    "        logging.debug('reset DFV_EN')\n",
     "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
     "        self.send_data(0x00)\n",
     "        \n",
