remove time.sleep

--- a/lib/waveshare_epd/epdconfig.ipynb
+++ b/lib/waveshare_epd/epdconfig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epdconfig.ipynb to python\n",
-      "[NbConvertApp] Writing 740 bytes to epdconfig.py\n"
+      "[NbConvertApp] Writing 3644 bytes to epdconfig.py\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,42 +30,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import logging\n",
-    "import spidev\n",
-    "import RPi.GPIO\n",
+    "import sys\n",
+    "import time\n",
     "\n",
-    "# Constants\n",
-    "RST_PIN         = 17\n",
-    "DC_PIN          = 25\n",
-    "CS_PIN          = 8\n",
-    "BUSY_PIN        = 24\n",
     "\n",
-    "def digital_write(pin, value):\n",
-    "    self.GPIO.output(pin, value)\n",
+    "class RaspberryPi:\n",
+    "    # Pin definition\n",
+    "    RST_PIN         = 17\n",
+    "    DC_PIN          = 25\n",
+    "    CS_PIN          = 8\n",
+    "    BUSY_PIN        = 24\n",
     "\n",
-    "def digital_read(pin):\n",
-    "    return self.GPIO.input(pin)\n",
+    "    def __init__(self):\n",
+    "        import spidev\n",
+    "        import RPi.GPIO\n",
     "\n",
-    "def delay_ms(delaytime):\n",
-    "    time.sleep(delaytime / 1000.0)\n",
-    "    \n",
-    "def module_init():\n",
-    "    GPIO.setmode(GPIO.BCM)\n",
-    "    GPIO.setwarnings(False)\n",
-    "    GPIO.setup(RST_PIN, GPIO.OUT)\n",
-    "    GPIO.setup(DC_PIN, GPIO.OUT)\n",
-    "    GPIO.setup(CS_PIN, GPIO.OUT)\n",
-    "    GPIO.setup(BUSY_PIN, GPIO.IN)\n",
+    "        self.GPIO = RPi.GPIO\n",
+    "        self.SPI = spidev.SpiDev()\n",
     "\n",
-    "    # SPI device, bus = 0, device = 0\n",
-    "    SPI.open(0, 0)\n",
-    "    SPI.max_speed_hz = 4000000\n",
-    "    SPI.mode = 0b00\n",
-    "    return 0    "
+    "    def digital_write(self, pin, value):\n",
+    "        self.GPIO.output(pin, value)\n",
+    "\n",
+    "    def digital_read(self, pin):\n",
+    "        return self.GPIO.input(pin)\n",
+    "\n",
+    "    def delay_ms(self, delaytime):\n",
+    "        cur_time = time.time()\n",
+    "        while time.time() < cur_time + delaytime/1000:\n",
+    "            pass\n",
+    "#         time.sleep(delaytime / 1000.0)\n",
+    "\n",
+    "    def spi_writebyte(self, data):\n",
+    "        self.SPI.writebytes(data)\n",
+    "\n",
+    "    def spi_writebyte2(self, data):\n",
+    "        self.SPI.writebytes2(data)\n",
+    "\n",
+    "    def module_init(self):\n",
+    "        self.GPIO.setmode(self.GPIO.BCM)\n",
+    "        self.GPIO.setwarnings(False)\n",
+    "        self.GPIO.setup(self.RST_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.DC_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.CS_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.BUSY_PIN, self.GPIO.IN)\n",
+    "\n",
+    "        # SPI device, bus = 0, device = 0\n",
+    "        self.SPI.open(0, 0)\n",
+    "        self.SPI.max_speed_hz = 4000000\n",
+    "        self.SPI.mode = 0b00\n",
+    "        return 0\n",
+    "\n",
+    "    def module_exit(self):\n",
+    "        logging.debug(\"spi end\")\n",
+    "        self.SPI.close()\n",
+    "\n",
+    "        logging.debug(\"close 5V, Module enters 0 power consumption ...\")\n",
+    "        self.GPIO.output(self.RST_PIN, 0)\n",
+    "        self.GPIO.output(self.DC_PIN, 0)\n",
+    "\n",
+    "        self.GPIO.cleanup()\n",
+    "\n",
+    "\n",
+    "class JetsonNano:\n",
+    "    # Pin definition\n",
+    "    RST_PIN         = 17\n",
+    "    DC_PIN          = 25\n",
+    "    CS_PIN          = 8\n",
+    "    BUSY_PIN        = 24\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        import ctypes\n",
+    "        find_dirs = [\n",
+    "            os.path.dirname(os.path.realpath(__file__)),\n",
+    "            '/usr/local/lib',\n",
+    "            '/usr/lib',\n",
+    "        ]\n",
+    "        self.SPI = None\n",
+    "        for find_dir in find_dirs:\n",
+    "            so_filename = os.path.join(find_dir, 'sysfs_software_spi.so')\n",
+    "            if os.path.exists(so_filename):\n",
+    "                self.SPI = ctypes.cdll.LoadLibrary(so_filename)\n",
+    "                break\n",
+    "        if self.SPI is None:\n",
+    "            raise RuntimeError('Cannot find sysfs_software_spi.so')\n",
+    "\n",
+    "        import Jetson.GPIO\n",
+    "        self.GPIO = Jetson.GPIO\n",
+    "\n",
+    "    def digital_write(self, pin, value):\n",
+    "        self.GPIO.output(pin, value)\n",
+    "\n",
+    "    def digital_read(self, pin):\n",
+    "        return self.GPIO.input(self.BUSY_PIN)\n",
+    "\n",
+    "    def delay_ms(self, delaytime):\n",
+    "        time.sleep(delaytime / 1000.0)\n",
+    "\n",
+    "    def spi_writebyte(self, data):\n",
+    "        self.SPI.SYSFS_software_spi_transfer(data[0])\n",
+    "\n",
+    "    def module_init(self):\n",
+    "        self.GPIO.setmode(self.GPIO.BCM)\n",
+    "        self.GPIO.setwarnings(False)\n",
+    "        self.GPIO.setup(self.RST_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.DC_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.CS_PIN, self.GPIO.OUT)\n",
+    "        self.GPIO.setup(self.BUSY_PIN, self.GPIO.IN)\n",
+    "        self.SPI.SYSFS_software_spi_begin()\n",
+    "        return 0\n",
+    "\n",
+    "    def module_exit(self):\n",
+    "        logging.debug(\"spi end\")\n",
+    "        self.SPI.SYSFS_software_spi_end()\n",
+    "\n",
+    "        logging.debug(\"close 5V, Module enters 0 power consumption ...\")\n",
+    "        self.GPIO.output(self.RST_PIN, 0)\n",
+    "        self.GPIO.output(self.DC_PIN, 0)\n",
+    "\n",
+    "        self.GPIO.cleanup()\n",
+    "\n",
+    "\n",
+    "if os.path.exists('/sys/bus/platform/drivers/gpiomem-bcm2835'):\n",
+    "    implementation = RaspberryPi()\n",
+    "else:\n",
+    "    implementation = JetsonNano()\n",
+    "\n",
+    "for func in [x for x in dir(implementation) if not x.startswith('_')]:\n",
+    "    setattr(sys.modules[__name__], func, getattr(implementation, func))\n",
+    "\n",
+    "\n",
+    "### END OF FILE ###"
    ]
   },
   {
