remove power setting to conform to BW mode & LUT from OTP (default)

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 17985 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 18168 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -198,10 +198,12 @@
     "        epdconfig.spi_writebyte([data])\n",
     "        epdconfig.digital_write(self.cs_pin, 1)\n",
     "        \n",
-    "    def ReadBusy(self):        \n",
+    "    #### REVIEW ####\n",
+    "    # consider making a break/raise after N loops of attempting to release busy status\n",
+    "    def ReadBusy(self):\n",
     "        logging.debug(\"e-Paper busy\")\n",
     "        while(epdconfig.digital_read(self.busy_pin) == 0):      #  0: idle, 1: busy\n",
-    "            epdconfig.delay_ms(200)                \n",
+    "            epdconfig.delay_ms(200)\n",
     "        logging.debug(\"e-Paper busy release\")\n",
     "\n",
     "    def set_lut(self):\n",
@@ -283,15 +285,7 @@
     "        self.send_command(0xF8)\n",
     "        self.send_data(0x93)\n",
     "        self.send_data(0x2A)        \n",
-    "    \n",
-    "        logging.debug('power setting')\n",
-    "        self.send_command(0x01) # POWER_SETTING\n",
-    "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
-    "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
-    "        self.send_data(0x2b) # VDH\n",
-    "        self.send_data(0x2b) # VDL\n",
-    "#         self.send_data(0x09) # VDHR \n",
-    "        \n",
+    "            \n",
     "        \n",
     "#         # Power optimization\n",
     "#         self.send_command(0xF8)\n",
@@ -307,16 +301,26 @@
     "#         self.send_command(0xF8)\n",
     "#         self.send_data(0x73)\n",
     "#         self.send_data(0x41)\n",
-    "        \n",
+    "\n",
+    "#         logging.debug('power setting')\n",
+    "#         self.send_command(0x01) # POWER_SETTING\n",
+    "#         self.send_data(0x03) # VDS_EN, VDG_EN\n",
+    "#         self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
+    "#         self.send_data(0x2b) # VDH\n",
+    "#         self.send_data(0x2b) # VDL\n",
+    "#         self.send_data(0x09) # VDHR \n",
+    "\n",
+    "\n",
     "        \n",
     "        logging.debug('reset DFV_EN')\n",
     "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
     "        self.send_data(0x00)\n",
     "        \n",
-    "        \n",
+    "        logging.debug('power on')\n",
     "        self.send_command(0x04) # POWER_ON\n",
     "        self.ReadBusy()\n",
     "\n",
+    "        logging.debug('pannel setting')\n",
     "        self.send_command(0x00) # PANEL_SETTING\n",
     "        self.send_data(0xAF) # KW-BF   KWR-AF    BWROTP 0f\n",
     "        \n",
