pannel setting does not conform to standard

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -320,8 +320,10 @@
     "        self.send_command(0x04) # POWER_ON\n",
     "        self.ReadBusy()\n",
     "\n",
+    "\n",
     "        logging.debug('pannel setting')\n",
     "        self.send_command(0x00) # PANEL_SETTING\n",
+    "        # should be (0x1F) according to standard; 0xAF according to WaveShare master\n",
     "        self.send_data(0xAF) # KW-BF   KWR-AF    BWROTP 0f\n",
     "        \n",
     "        self.send_command(0x30) # PLL_CONTROL\n",
