switch to  BW mode & LUT from register

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 18168 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 18254 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -326,6 +326,7 @@
     "        # should be (0x1F) according to standard; 0xAF according to WaveShare master\n",
     "        self.send_data(0xAF) # KW-BF   KWR-AF    BWROTP 0f\n",
     "        \n",
+    "        logging.debug('PLL control')\n",
     "        self.send_command(0x30) # PLL_CONTROL\n",
     "        self.send_data(0x3A) # 3A 100HZ   29 150Hz 39 200HZ    31 171HZ\n",
     "    \n",
