VCOM and data interval setting

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 18368 bytes to epd2in7.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter-nbconvert --to python --template python_clean epd2in7.ipynb"
    ]
@@ -329,6 +320,13 @@
     "        logging.debug('PLL control frequency setting (100Hz)')\n",
     "        self.send_command(0x30) # PLL_CONTROL\n",
     "        self.send_data(0x3A) # 3A 100HZ   29 150Hz 39 200HZ    31 171HZ\n",
+    "        \n",
+    "        logging.debug('resolution setting')\n",
+    "        self.send_command(0x61)\n",
+    "        self.send+command(0x01)\n",
+    "        self.send+command(0x08)\n",
+    "        self.send+command(0x00)\n",
+    "        self.send+command(0xb0)\n",
     "    \n",
     "        logging.debug('Vcom and data interval setting')\n",
     "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
