--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
+      "[NbConvertApp] Writing 18586 bytes to epd2in7.py\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter-nbconvert --to python --template python_clean epd2in7.ipynb"
    ]
@@ -323,10 +332,10 @@
     "        \n",
     "        logging.debug('resolution setting')\n",
     "        self.send_command(0x61)\n",
-    "        self.send+command(0x01)\n",
-    "        self.send+command(0x08)\n",
-    "        self.send+command(0x00)\n",
-    "        self.send+command(0xb0)\n",
+    "        self.send_command(0x01)\n",
+    "        self.send_command(0x08)\n",
+    "        self.send_command(0x00)\n",
+    "        self.send_command(0xb0)\n",
     "    \n",
     "        logging.debug('Vcom and data interval setting')\n",
     "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
