swap vcom and vcm_dc settings opposite order from spec

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 18813 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 18827 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -337,19 +337,15 @@
     "        self.send_command(0x00)\n",
     "        self.send_command(0xb0)\n",
     "        \n",
-    "        # this is in the spec, but does not work properly\n",
-    "#         logging.debug('VCM_DC setting ')\n",
-    "#         self.send_command(0x82)\n",
-    "#         self.send_command(0x12)\n",
-    "    \n",
+    "        # order of VCOM and VCM_DC is swapped in spec; must be swapped as shown below\n",
     "        logging.debug('Vcom and data interval setting')\n",
     "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
     "        self.send_data(0x87)\n",
-    "\n",
-    "        logging.debug('VCM_DC setting ')        \n",
+    "        \n",
+    "        logging.debug('VCM_DC setting ')       \n",
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
     "        self.send_data(0x12)\n",
-    "        \n",
+    "\n",
     "        \n",
     "        self.set_lut()\n",
     "        \n",
