--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -562,22 +562,24 @@
     "#         # pass\n",
     "        \n",
     "    def Clear(self, color):\n",
-    "        self.send_command(0x10)\n",
+    "        self.send_command(0x10) # start data transmission 1\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(0xFF)\n",
-    "        self.send_command(0x13)\n",
+    "        self.send_command(0x13) # start data transmission 2\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(0xFF)\n",
-    "        self.send_command(0x12) \n",
+    "        self.send_command(0x12) # display refresh\n",
     "        self.ReadBusy()\n",
     "\n",
     "    def sleep(self):\n",
-    "        self.send_command(0X50)\n",
+    "        logging.info('enter sleep')\n",
+    "        self.send_command(0X50) # Vcom and data interval setting\n",
     "        self.send_data(0xf7)\n",
-    "        self.send_command(0X02)\n",
-    "        self.send_command(0X07)\n",
-    "        self.send_data(0xA5)\n",
-    "        \n",
+    "        logging.debug('power off')\n",
+    "        self.send_command(0X02) # power off\n",
+    "        logging.debug('enter deep sleep')\n",
+    "        self.send_command(0X07) # deep sleep\n",
+    "        self.send_data(0xA5) #deep sleep\n",
     "        epdconfig.delay_ms(2000)\n",
     "        epdconfig.module_exit()\n",
     "### END OF FILE ###"
