--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 18827 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 18985 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -560,7 +560,9 @@
     "#         epdconfig.delay_ms(200)\n",
     "#         self.ReadBusy()\n",
     "#         # pass\n",
-    "        \n",
+    "    \n",
+    "    #### REVIEW ####\n",
+    "    # color arg is not needed -- keep for consistency between color and non-color models?\n",
     "    def Clear(self, color):\n",
     "        self.send_command(0x10) # start data transmission 1\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
