--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -79,6 +79,7 @@
     "#         self.GRAY3  = GRAY3 #gray\n",
     "#         self.GRAY4  = GRAY4 #Blackest\n",
     "\n",
+    "    # lookup tables\n",
     "    lut_vcom_dc = [0x00, 0x00,\n",
     "        0x00, 0x08, 0x00, 0x00, 0x00, 0x02,\n",
     "        0x60, 0x28, 0x28, 0x00, 0x00, 0x01,\n",
@@ -88,6 +89,8 @@
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00\n",
     "    ]\n",
+    "    \n",
+    "    # white to white transition\n",
     "    lut_ww = [\n",
     "        0x40, 0x08, 0x00, 0x00, 0x00, 0x02,\n",
     "        0x90, 0x28, 0x28, 0x00, 0x00, 0x01,\n",
@@ -97,6 +100,8 @@
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
+    "    \n",
+    "    # black to white transition\n",
     "    lut_bw = [\n",
     "        0x40, 0x08, 0x00, 0x00, 0x00, 0x02,\n",
     "        0x90, 0x28, 0x28, 0x00, 0x00, 0x01,\n",
@@ -106,6 +111,8 @@
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
+    "    \n",
+    "    # black to black transition\n",
     "    lut_bb = [\n",
     "        0x80, 0x08, 0x00, 0x00, 0x00, 0x02,\n",
     "        0x90, 0x28, 0x28, 0x00, 0x00, 0x01,\n",
@@ -115,6 +122,8 @@
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
+    "    \n",
+    "    # white to black transition\n",
     "    lut_wb = [\n",
     "        0x80, 0x08, 0x00, 0x00, 0x00, 0x02,\n",
     "        0x90, 0x28, 0x28, 0x00, 0x00, 0x01,\n",
