Add gray lut, comments

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -48,15 +48,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Constants\n",
+    "# Constants\n",
     "EPD_WIDTH = 176\n",
     "EPD_HEIGHT = 264\n",
     "\n",
     "# colors\n",
-    "# GRAY1  = 0xff #white\n",
-    "# GRAY2  = 0xC0\n",
-    "# GRAY3  = 0x80 #gray\n",
-    "# GRAY4  = 0x00 #Blackest"
+    "GRAY1  = 0xff #white\n",
+    "GRAY2  = 0xC0\n",
+    "GRAY3  = 0x80 #gray\n",
+    "GRAY4  = 0x00 #Blackest"
    ]
   },
   {
@@ -133,58 +133,58 @@
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
-    "#     ###################full screen update LUT######################\n",
-    "#     #0~3 gray\n",
-    "#     gray_lut_vcom = [\n",
-    "#     0x00, 0x00,\n",
-    "#     0x00, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x60, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x14, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x13, 0x0A, 0x01, 0x00, 0x01,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\t\t\t\t\n",
-    "#     ]\n",
-    "#     #R21\n",
-    "#     gray_lut_ww =[\n",
-    "#     0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "#     0x10, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "#     0xA0, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     ]\n",
-    "#     #R22H r\n",
-    "#     gray_lut_bw =[\n",
-    "#     0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "#     0x99, 0x0C, 0x01, 0x03, 0x04, 0x01,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     ]\n",
-    "#     #R23H w\n",
-    "#     gray_lut_wb =[\n",
-    "#     0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "#     0x99, 0x0B, 0x04, 0x04, 0x01, 0x01,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     ]\n",
-    "#     #R24H b\n",
-    "#     gray_lut_bb =[\n",
-    "#     0x80, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "#     0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "#     0x20, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "#     0x50, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "#     ]\n",
+    "    ###################full screen update LUT######################\n",
+    "    #0~3 gray\n",
+    "    gray_lut_vcom = [\n",
+    "    0x00, 0x00,\n",
+    "    0x00, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x60, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x14, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x13, 0x0A, 0x01, 0x00, 0x01,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\t\t\t\t\n",
+    "    ]\n",
+    "    #R21\n",
+    "    gray_lut_ww =[\n",
+    "    0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "    0x10, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "    0xA0, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    ]\n",
+    "    #R22H r\n",
+    "    gray_lut_bw =[\n",
+    "    0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "    0x99, 0x0C, 0x01, 0x03, 0x04, 0x01,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    ]\n",
+    "    #R23H w\n",
+    "    gray_lut_wb =[\n",
+    "    0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "    0x99, 0x0B, 0x04, 0x04, 0x01, 0x01,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    ]\n",
+    "    #R24H b\n",
+    "    gray_lut_bb =[\n",
+    "    0x80, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "    0x20, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "    0x50, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "    ]\n",
     "    \n",
     "#     # Hardware reset\n",
     "    def reset(self):\n",
@@ -490,13 +490,15 @@
     "#         return buf\n",
     "    \n",
     "    def display(self, image):\n",
-    "        self.send_command(0x10)\n",
+    "        # load image into buffer\n",
+    "        self.send_command(0x10) # start transmission 1\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(0xFF)\n",
-    "        self.send_command(0x13)\n",
+    "        self.send_command(0x13) # start transmisison 2\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(image[i])\n",
-    "        self.send_command(0x12) \n",
+    "        # write buffer to display\n",
+    "        self.send_command(0x12) # display refresh\n",
     "        self.ReadBusy()\n",
     "\n",
     "#     def display_4Gray(self, image):\n",
@@ -573,12 +575,15 @@
     "    #### REVIEW ####\n",
     "    # color arg is not needed -- keep for consistency between color and non-color models?\n",
     "    def Clear(self, color):\n",
+    "        # send blank (0xFF) into buffer\n",
     "        self.send_command(0x10) # start data transmission 1\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(0xFF)\n",
+    "        # send blank (0xFF) into buffer            \n",
     "        self.send_command(0x13) # start data transmission 2\n",
     "        for i in range(0, int(self.width * self.height / 8)):\n",
     "            self.send_data(0xFF)\n",
+    "        # write buffer to display\n",
     "        self.send_command(0x12) # display refresh\n",
     "        self.ReadBusy()\n",
     "\n",
