add power settings to conform to BW mode & LUT from register

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -311,12 +311,12 @@
     "#         self.send_data(0x73)\n",
     "#         self.send_data(0x41)\n",
     "\n",
-    "#         logging.debug('power setting')\n",
-    "#         self.send_command(0x01) # POWER_SETTING\n",
-    "#         self.send_data(0x03) # VDS_EN, VDG_EN\n",
-    "#         self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
-    "#         self.send_data(0x2b) # VDH\n",
-    "#         self.send_data(0x2b) # VDL\n",
+    "        logging.debug('power setting')\n",
+    "        self.send_command(0x01) # POWER_SETTING\n",
+    "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
+    "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
+    "        self.send_data(0x2b) # VDH\n",
+    "        self.send_data(0x2b) # VDL\n",
     "#         self.send_data(0x09) # VDHR \n",
     "\n",
     "\n",
