reorganize to match spec

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -274,6 +274,8 @@
     "#         self.send_data(0x17)\n",
     "        self.send_data(0x04)\n",
     "    \n",
+    "        # poorly documented -- unclear what this does\n",
+    "        # see https://github.com/waveshare/e-Paper/issues/155\n",
     "        logging.debug('power optimization stages 1-4')\n",
     "        # Power optimization stage 1\n",
     "        self.send_command(0xF8)\n",
@@ -296,34 +298,18 @@
     "        self.send_data(0x2A)        \n",
     "            \n",
     "        \n",
-    "#         # Power optimization\n",
-    "#         self.send_command(0xF8)\n",
-    "#         self.send_data(0xA0)\n",
-    "#         self.send_data(0xA5)\n",
+    "        logging.debug('reset DFV_EN')\n",
+    "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
+    "        self.send_data(0x00)\n",
     "        \n",
-    "#         # Power optimization\n",
-    "#         self.send_command(0xF8)\n",
-    "#         self.send_data(0xA1)\n",
-    "#         self.send_data(0x00)\n",
-    "        \n",
-    "#         # Power optimization\n",
-    "#         self.send_command(0xF8)\n",
-    "#         self.send_data(0x73)\n",
-    "#         self.send_data(0x41)\n",
-    "\n",
     "        logging.debug('power setting')\n",
     "        self.send_command(0x01) # POWER_SETTING\n",
     "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
     "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
     "        self.send_data(0x2b) # VDH\n",
     "        self.send_data(0x2b) # VDL\n",
-    "#         self.send_data(0x09) # VDHR \n",
-    "\n",
-    "\n",
+    "#         self.send_data(0x09) # VDHR -- set voltage for red pixel (uneeded in B&W)\n",
     "        \n",
-    "        logging.debug('reset DFV_EN')\n",
-    "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
-    "        self.send_data(0x00)\n",
     "        \n",
     "        logging.debug('power on')\n",
     "        self.send_command(0x04) # POWER_ON\n",
