add comments, reorder commands

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 18985 bytes to epd2in7.py\n"
+      "[NbConvertApp] Writing 19158 bytes to epd2in7.py\n"
      ]
     }
    ],
@@ -315,7 +315,13 @@
     "        self.send_command(0x04) # POWER_ON\n",
     "        self.ReadBusy()\n",
     "\n",
-    "\n",
+    "        # 0x16 runs a partial display refresh - see p17 in docs\n",
+    "        # purpose is unclear -- perhaps wipes display? \n",
+    "#         self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
+    "#         self.send_data(0x00)\n",
+    "#         self.send_command(0x04) # POWER_ON\n",
+    "#         self.ReadBusy()\n",
+    "        \n",
     "        logging.debug('pannel setting')\n",
     "        self.send_command(0x00) # PANEL_SETTING\n",
     "        # should be (0x1F) according to standard; 0xAF according to WaveShare master\n",
@@ -325,17 +331,17 @@
     "        self.send_command(0x30) # PLL_CONTROL\n",
     "        self.send_data(0x3A) # 3A 100HZ   29 150Hz 39 200HZ    31 171HZ\n",
     "        \n",
-    "        logging.debug('resolution setting')\n",
+    "        logging.debug('resolution setting (176x264)')\n",
     "        self.send_command(0x61)\n",
-    "        self.send_command(0x01)\n",
-    "        self.send_command(0x08)\n",
-    "        self.send_command(0x00)\n",
-    "        self.send_command(0xb0)\n",
+    "        self.send_data(0x00) #176\n",
+    "        self.send_data(0xb0) \n",
+    "        self.send_data(0x01) #264\n",
+    "        self.send_data(0x08)\n",
     "        \n",
     "        # order of VCOM and VCM_DC is swapped in spec; must be swapped as shown below\n",
     "        logging.debug('Vcom and data interval setting')\n",
     "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
-    "        self.send_data(0x87)\n",
+    "        self.send_data(0x57) # 0x57 in original code\n",
     "        \n",
     "        logging.debug('VCM_DC setting ')       \n",
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
